--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -1,12 +1,22 @@
 <aside class="w-64 h-screen bg-white " aria-label="Sidebar">
   <div class="overflow-y-auto py-4 px-3 rounded-r">
+    <!--============================-->
+    <!--MENU DEL SIDENAV-->
     <ul class="space-y-2">
+
+        <!--============================-->
+        <!--LOGO-->
         <li>
             <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 mb-5">   
                     <img src="../../../assets/logo-billfast.png" class="w-9 h-9"> 
                     <span class="ml-3 text-lg">BillFast</span>
             </a>
         </li>
+         <!--END LOGO-->
+         <!--============================-->
+
+         <!--============================-->
+         <!--PANEL INFORMATIVO Y LABEL DE TRANSACCIONES-->
         <li>
             <a routerLink="" class="flex items-center justify-between w-full px-5 py-2 mb-5 rounded transition duration-75 group  hover:bg-gray-300">
                 <div>
@@ -18,6 +28,11 @@
         <li> 
             <span class="ml-4 text-sm">Transacciones</span>
         </li>
+         <!--============================-->
+         <!--END PANEL INFORMATIVO Y LABEL DE TRANSACCIONES-->
+
+         <!--============================-->
+         <!--MENU TRANSACCIONES-->
         <li>
             <a routerLink="" type="button" class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                 <div>
@@ -26,15 +41,24 @@
                 </div>
                 <i class="fa-solid fa-chevron-left"></i>
             </a>
-            <ul class="hidden space-y-2 text-zinc-700" *ngFor="let transaction of Transacciones | ObjToArray">
+            <!--============================-->
+            <!--SUBMENU TRANSACCIONES-->
+            <ul class=" space-y-2 text-zinc-700" *ngFor="let transaccion of Transacciones | ObjToArray">
                 <li>
-                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                        <i class="{{transaction.icon}}"></i>
-                            <span class="ml-5 ">{{transaction.name}}</span>
+                    <a routerLink="{{transaccion.url}}" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                        <i class="{{transaccion.icon}}"></i>
+                            <span class="ml-5 ">{{transaccion.name}}</span>
                     </a>
                 </li>
             </ul>
+            <!--END SUBMENU TRANSACCIONES-->
+            <!--============================-->
         </li>
+        <!--END MENU TRANSACCIONES-->
+            <!--============================-->
+
+         <!--============================-->
+         <!--MENU CATALOGOS-->
         <li>
             <a routerLink="" type="button" class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                 <div>
@@ -43,15 +67,24 @@
                 </div>
                 <i class="fa-solid fa-chevron-left"></i>
             </a>
+            <!--============================-->
+            <!--SUBMENU CATALOGOS-->
             <ul class="hidden space-y-2 text-zinc-700"  *ngFor="let catalogo of Catalogos | ObjToArray">
                 <li>
-                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                    <a routerLink="{{catalogo.url}}" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                         <i class={{catalogo.icon}}></i>
                         <span class="ml-5 ">{{catalogo.name}}</span>
                     </a>
                 </li>     
             </ul>
+             <!--END SUBMENU CATALOGOS-->
+             <!--============================-->
         </li>
+         <!--END MENU CATALOGOS-->
+         <!--============================-->
+
+         <!--============================-->
+         <!--MENU SERVICIO AL CLIENTE-->
         <li>
             <a routerLink="" type="button" class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                 <div>
@@ -60,15 +93,24 @@
                 </div>
                 <i class="fa-solid fa-chevron-left"></i>
             </a>
+            <!--============================-->
+            <!-- SUBMENU SERVICIO AL CLIENTE-->
             <ul class="hidden space-y-2 text-zinc-700" *ngFor="let servicioAlCliente of ServicioAlCliente | ObjToArray">
                 <li>
-                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                    <a routerLink="{{servicioAlCliente.url}}" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                         <i class={{servicioAlCliente.icon}}></i>
                         <span class="ml-5 ">{{servicioAlCliente.name}}</span>
                     </a>
                 </li>
             </ul>
+            <!--END SUBMENU SERVICIO AL CLIENTE-->
+            <!--============================-->
         </li>
+         <!--END MENU SERVICIO AL CLIENTE-->
+         <!--============================-->
+
+         <!--============================-->
+         <!--MENU GESTION TRABAJO-->
         <li>
             <a routerLink="" type="button" class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                 <div>
@@ -77,15 +119,24 @@
                 </div>
                 <i class="fa-solid fa-chevron-left"></i>
             </a>
+            <!--============================-->
+            <!-- SUBMENU GESTION TRABAJO-->
             <ul class="hidden space-y-2 text-zinc-700" *ngFor="let gestionDeTrabajo of GestionDeTrabajo | ObjToArray" >
                 <li>
-                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                    <a routerLink="{{gestionDeTrabajo.url}}" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                         <i class={{gestionDeTrabajo.icon}}></i>
                         <span class="ml-5 ">{{gestionDeTrabajo.name}}</span>
                     </a>
                 </li>
             </ul>
+            <!--END SUBMENU GESTION DE TRABAJO-->
+            <!--============================-->
         </li>
+         <!--END MENU GESTION DE TRABAJO-->
+         <!--============================-->
+
+        <!--============================-->
+        <!-- MENU PLANIFICACION-->
         <li>
             <a routerLink="" type="button" class="flex items-center justify-between w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                 <div>
@@ -94,15 +145,21 @@
                 </div>
                 <i class="fa-solid fa-chevron-left"></i>
             </a>
+            <!--============================-->
+            <!-- SUBMENU PLANIFICACION-->
             <ul class="hidden space-y-2 text-zinc-700" *ngFor="let planificacion of Planificacion | ObjToArray">
                 <li>
-                    <a routerLink="" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                    <a routerLink="{{planificacion.url}}" type="button" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300 hover:text-blue-500" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                         <i class={{planificacion.icon}}></i>
                         <span class="ml-5 ">{{planificacion.name}}</span>
                     </a>
                 </li>
             </ul>
+            <!-- END SUBMENU PLANIFICACION-->
+            <!--============================-->
         </li>
+        <!-- END MENU PLANIFICACION-->
+        <!--============================-->
         <li>
             <a routerLink="" type="button" class="flex items-center w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-300" aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
                     <i class="fa-solid fa-print"></i> 
@@ -110,5 +167,7 @@
             </a>
         </li>
     </ul>
+    <!--END MENU DEL SIDENAV-->
+    <!--============================-->
   </div>
 </aside>
