open, close, and click outside to close dropdown's header works

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="flex justify-start items-center absolute top-0 left-64 right-0 w-auto h-16 bg-stone-100">
     <div class="flex justify-end items-center space-x-5 w-full px-5 lg:text-sm">
         <!--IDIOMAS-->
-        <a routerLink="">
+        <a routerLink="" (click)="toogleLanguageMenu()">
             <span class="text-gray-500">Español (República Dominicana)</span>
             <!--DROPDOWN IDIOMAS-->
-            <ul class="absolute flex flex-col w-44 space-y-2 text-zinc-700 bg-white top-16 shadow-lg right-64 rounded">
+            <ul #AsDropdown *ngIf="isLanguageMenuOpened" class="absolute flex flex-col w-44 space-y-2 text-zinc-700 bg-white top-16 shadow-lg right-64 rounded">
                 <li>
                     <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
                         <i class="fa-brands fa-canadian-maple-leaf"></i>
@@ -23,7 +23,7 @@
         <!--END IDIOMAS-->
 
         <!--USER-->
-        <a routerLink="" class="justify">
+        <a routerLink="" class="justify" (click)="toggleUserMenu()">
         <div class="flex justify-start items-center">
                 <span class="mr-5">Nasser Emil Issa Tavares</span>
                 
@@ -34,7 +34,7 @@
         </a>
         <!--END USER-->
         <!--DROPDOWN USER-->
-        <ul class="absolute flex flex-col w-44 space-y-2 text-zinc-700 bg-white top-16 shadow-lg right-7 rounded">
+        <ul #AsDropdown *ngIf="isUserMenuOpened" class="absolute flex flex-col w-44 space-y-2 text-zinc-700 bg-white top-16 shadow-lg right-7 rounded">
             <li>
                 <a routerLink="" class="flex items-center justify-start w-full px-5 py-2 rounded transition duration-75 group hover:bg-gray-100">
                     <i class="fa-solid fa-user"></i>
