--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="flex justify-start items-center absolute bottom-0 left-64 right-0 w-auto h-16 bg-stone-100">
-   <p class="text-gray-600 text-xl pl-4"> Desarrollado por <span class="text-blue-800 font-medium"> <a href="https://www.transnegrd.com/" target="_blank">Transneg.</a></span></p>
+   <p class="text-gray-600 text-md pl-4"> Desarrollado por <span class="text-blue-800 font-medium"> <a href="https://www.transnegrd.com/" target="_blank">Transneg.</a></span></p>
 </div>
